[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flood-monitoring-app"
version = "0.1.0"
description = "Environment Agency Real Time flood-monitoring Plotting App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
flood-monitor = "flood_monitoring_app.cli:run_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]

