[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flood-monitoring-app"
version = "0.1.0"
description = "Environment Agency Real Time flood-monitoring Plotting App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff",  # Development dependencies for testing, linting, etc.
]

[project.scripts]
flood-monitor = "flood_monitoring_app.cli:run_cli"
flood-monitor-server = "flood_monitoring_app.run_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--import-mode=importlib"]

